; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_atari_scsi.c_ENABLE_IRQ.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/extr_atari_scsi.c_ENABLE_IRQ.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IRQ_TT_MFP_SCSI = common dso_local global i32 0, align 4
@IRQ_MFP_FSCSI = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ENABLE_IRQ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ENABLE_IRQ() #0 {
  %1 = call i64 (...) @IS_A_TT()
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @IRQ_TT_MFP_SCSI, align 4
  %5 = call i32 @atari_enable_irq(i32 %4)
  br label %9

6:                                                ; preds = %0
  %7 = load i32, i32* @IRQ_MFP_FSCSI, align 4
  %8 = call i32 @atari_enable_irq(i32 %7)
  br label %9

9:                                                ; preds = %6, %3
  ret void
}

declare dso_local i64 @IS_A_TT(...) #1

declare dso_local i32 @atari_enable_irq(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
